--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>com.shabs</groupId>
     <artifactId>shabs_algos</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <build>
         <plugins>
@@ -19,6 +20,9 @@
             </plugin>
         </plugins>
     </build>
+    <modules>
+        <module>algos</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.testng</groupId>
